# AntiDisturbPomodoro v1.0.0 Release Notes
**Release Date:** February 6, 2026
**Platform:** macOS 14.0 or later

We're excited to announce the first release of **AntiDisturbPomodoro**, a full-featured macOS Pomodoro timer designed for serious productivity work. This app lives in your menu bar and helps you maintain focus through enforced breaks, customizable timers, and comprehensive tracking.

---

## What's New in v1.0.0

### 🍅 Core Timer Functionality

**Pomodoro Timer with Customizable Durations**
- Work sessions: configurable from 1 to 120 minutes (default: 25 minutes)
- Short breaks: configurable from 1 to 120 minutes (default: 5 minutes)
- Long breaks: configurable from 1 to 120 minutes (default: 15 minutes)
- Automatic long breaks after every 4 work sessions (configurable)
- Start, pause, resume, and reset controls
- Persistent state: timer continues running across app restarts

**Menu Bar Integration**
- Lightweight menu bar interface with tomato emoji icon (🍅)
- Click to access popover with timer controls
- Optional countdown display in menu bar
- Custom menu bar icons for different states (work, break, paused, idle)
- Quick access to all features without opening a separate window

---

### 🚫 Full-Screen Break Overlay

**Enforced Breaks for Better Rest**
- Full-screen overlay covers all connected monitors when breaks begin
- Countdown timer display shows remaining break time
- High window level (screen saver priority) ensures overlay stays on top

**Flexible Break Control Options**
- **Strict Mode**: Prevents skipping breaks entirely to ensure proper rest
- **Delayed Skip**: Shows "End Break" button that becomes active after a configurable delay (default: 30 seconds)
- **Need More Time**: Add extra time to ongoing breaks with a single click (default: 60 seconds)
- **Hold After Break**: Keep overlay visible at 0:00 after break ends, requiring manual dismissal

---

### 🔔 Sound System

**Built-in Sounds**
Four professional audio files included:
- Alert (98KB

--- a/AntiDisturbPomodoro/AntiDisturbPomodoro.entitlements
+++ b/AntiDisturbPomodoro/AntiDisturbPomodoro.entitlements
@@ -1,5 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict/>
+<dict>
+    <!-- Sandbox DISABLED - Required for self-updating functionality -->
+    <!-- The app needs to be able to write to /Applications and execute update scripts -->
+    <key>com.apple.security.app-sandbox</key>
+    <false/>
+    
+    <!-- Hardened Runtime is still enabled via Xcode build settings -->
+    <!-- These entitlements are for hardened runtime, not sandbox -->
+    
+    <!-- Allow outgoing network connections (for checking/downloading updates) -->
+    <key>com.apple.security.network.client</key>
+    <true/>
+    
+    <!-- Allow AppleEvents for automation (used for admin privilege escalation) -->
+    <key>com.apple.security.automation.apple-events</key>
+    <true/>
+</dict>
 </plist>
